# streamlit_sandbox

./: .gitignore  Dockerfile  README.md  deploy.yaml  pyproject.toml
.github/workflows/: docker-image.yml
.streamlit/: config.toml
src/: main.py
streamlit_sandbox/: README.md  pyproject.toml
